fixed the code so that the application form is responsive on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,21 +127,8 @@ body {
 
 /*apply */
 
-
-form {
-	width: 700px;
-	padding: 25px;
-	border-radius: 8px;
-	margin: 25px auto;
-	background-color: #3c3a85;
-}
-
-.float-left {
-    float: left;
-}
-
 .block-label {
-	display: block;
+    display: block;
 }
 
 input[type=submit] {
@@ -154,13 +141,15 @@ input[type=submit] {
 	border-radius: 5px;
     font-family: inherit;
     text-transform: capitalize;
+
 }
 
 input[type=text] {
     height: 30px;
-    width: 50%;
+    width: 60%;
     padding-left: 10px;
 	margin: 0 auto;
+
 }
 
 
@@ -168,7 +157,17 @@ input[type=text] {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    width: 700px;
+    padding: 25px;
+	border-radius: 8px;
+	margin: 25px auto;
+	background-color: #3c3a85;
+} 
+
+textarea {
+    width: 300px;
+    height: 150px;
+  }
 
 /*form dump page */
 
@@ -236,9 +235,15 @@ footer {
         margin: 10px;
     }
 
-    form > * {
-        width: 50%;
+    #application-form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 60%;
+        margin: 0 auto;
+        flex: 1;
     }
+
 
 
 
